@startuml
'https://plantuml.com/sequence-diagram

autonumber

@startuml

skinparam linetype polyline
hide circle
class BagPacker{
runBagPacker():void
}
namespace iohandler #DDDAAA {
    class Parser{
    parse():void
    }
    class Storage{
            save():void
            load():void
        }
    class Ui{
            initialMessage():void
            errorMessage():void
            helpMessage():void
            printToUser():void
    }
}
note "Ui class is associated with all child classes \nof Command class these association lines \nare omitted to reduce mess" as uiNote
uiNote .[Hidden] Ui
skinparam groupInheritance 2
namespace packingfunc #DDDDDD {
    class Item{
    packedQuantity: int
    totalQuantity: int
    itemName: String
    }
    class "<<static>>\nPackingList" as PackingList{
    itemList: ArrayList<Item>
    }
}
namespace commands #AAAAAA {
    class "{Abstract}\nCommand" as Command{
    execute(<<static>> PackingList):void
    }
    note right
    Omitted some child commands to avoid clutter
    (DeleteList, Help, UnpackAll, ListUnpacked,
    EditQuantity, Bye and Incorrect Command)
    end note


    class AddCommand extends Command
    class DeleteCommand extends Command
    class ListCommand extends Command
    class FindCommand extends Command
    class HelpCommand extends Command
    class PackCommand extends Command
    class UnpackCommand extends Command
}
BagPacker "App 1" --> "1..*" Parser : > Parse user \ninput
BagPacker "1" --> "1" Storage : > Manage saved data upon \ninitialisation and closing
BagPacker "1" --> "*" Ui : > Send message \nto CLI using
PackingList "1" *-- "*" Item : > packing list \ncomposed \nof items
Parser "Parser 1" --> "1" Command : Parser creates relevant Command >

@enduml